--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,6 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=logic_dev
 DB_PORT=3306
-PORT=5000 
+PORT=5000
+ALLOWED_ORIGINS=http://localhost:3000,http://103.169.94.136:5000
+HOST=0.0.0.0 
