--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,6 @@ DB_PASSWORD=
 DB_NAME=logic_dev
 DB_PORT=3306
 PORT=5000
-ALLOWED_ORIGINS=http://localhost:3000,http://103.169.94.136:5000
+NODE_ENV=development
+ALLOWED_ORIGINS=http://localhost:3000,http://103.169.94.136:5000,http://103.169.94.136:3000
 HOST=0.0.0.0 
