--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,6 @@ DB_PORT=3306
 PORT=5000
 NODE_ENV=production
 ALLOWED_ORIGINS=http://103.169.94.136:3000,http://localhost:3000,http://103.169.94.136
-HOST=0.0.0.0 
+HOST=0.0.0.0
+APPLICATION_ID="APP_017905"
+PASSWORD="5fb8fbc142984d082d1b70dfe5674b44" 
