--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
     "dev": "nodemon --watch './**/*.js' --ignore 'node_modules/' server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.5",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.9.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
