--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ DB_NAME=logic_dev
 DB_PORT=3306
 PORT=5000
 NODE_ENV=production
-ALLOWED_ORIGINS=http://103.169.94.136:3000,http://localhost:3000,http://103.169.94.136
+ALLOWED_ORIGINS=http://103.169.94.136:3000,http://localhost:3000,http://103.169.94.136,http://103.169.94.147,http://103.169.94.147:3000
 HOST=0.0.0.0
 APPLICATION_ID="APP_017905"
 PASSWORD="5fb8fbc142984d082d1b70dfe5674b44" 
