--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=http://103.169.94.136:5000
-PUBLIC_URL=http://103.169.94.136:3000
+REACT_APP_API_URL=http://103.169.94.136:5000,http://103.169.94.147:5000
+PUBLIC_URL=http://103.169.94.136:3000,http://103.169.94.147:3000
 REACT_APP_APPLICATION_ID="APP_017905"
 REACT_APP_PASSWORD="5fb8fbc142984d082d1b70dfe5674b44"
 REACT_APP_ENCRYPTION_KEY="your-secret-key-here"
