--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=
+DB_USER=logic_user
+DB_PASSWORD=your_secure_password
 DB_NAME=logic_dev
 DB_PORT=3306
 PORT=5000
